js/src/tests/test262/language/import/import-defer/errors/get-self-while-defer-evaluating/main.js
import
defer
*
as
ns
from
"
.
/
dep_FIXTURE
.
js
"
;
assert
(
globalThis
[
"
error
on
ns
.
foo
"
]
instanceof
TypeError
"
ns
.
foo
while
evaluating
throws
a
TypeError
"
)
;
ns
.
foo
;
reportCompare
(
0
0
)
;
